오늘의밥상추가 및 메인, 레이아웃 수정

--- a/css/m.base.css
+++ b/css/m.base.css
@@ -33,8 +33,8 @@ span{vertical-align:baseline;}
 @media screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (orientation: portrait),
        screen and (min-device-width: 1366px) and (max-device-width: 1024px) and (orientation: landscape) {
     html, body {
-        font-size: 32px; /* 원하는 크기로 조절 */
-        background-color: #f9f9f9; /* 예시: 배경 조정 */
+        font-size: 32px; /* 원하는 크기로 조절 
+        background-color: #f9f9f9; /* 예시: 배경 조정
     }
 }
 */
