--- a/css/m.style.css
+++ b/css/m.style.css
@@ -672,8 +672,8 @@
 
 .main-today-meal-wrap{margin-top:2.5rem; padding:1rem 1rem 2.5rem;display:flex;flex-direction: column;gap:2.5rem;background: url('../images/common/bg-main-today-meal.png') no-repeat 0 0;background-size: cover;}
 .main-today-meal-wrap .today-meal {position:relative;}
-.main-today-meal-wrap .today-meal .img {position:relative;height:25rem;}
-.main-today-meal-wrap .today-meal .img img {object-fit: cover;width:100%;height:100%;}
+.main-today-meal-wrap .today-meal .img {position:relative;}
+.main-today-meal-wrap .today-meal .img img {width:100%;}
 .main-today-meal-wrap .today-meal .img:before { content: ''; display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(180deg, rgba(217, 217, 217, 0) 50%, rgba(0, 0, 0, 0.8) 100%);}
 .main-today-meal-wrap .today-meal .desc {position: absolute; bottom: 0; left: 0; width: 100%; color: #fff; padding: 1.25rem 1rem;text-align:center;}
 .main-today-meal-wrap .today-meal .desc strong {font-size:1.375rem;}
